--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]'):latest
+          tags: ghcr.io/$(tr '[:upper:]' '[:lower:]' < ${{ github.repository }}):latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
