--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,13 @@ jobs:
     name: ""
     runs-on: ubuntu-latest
     steps:
+      - id: string
+        uses: ASzc/change-string-case-action@v2
+        with:
+          string: ${{ github.repository }}
+      - run: |
+          echo "${{ steps.string.outputs.lowercase }}"
+    steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -23,6 +30,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/$(echo ${github.repository,,}):latest
+          tags: ghcr.io/${{ github.repository }}:latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
