--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,16 +18,14 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: lowercase repo
-        id: string
-        uses: ASzc/change-string-case-action@v2
-        with:
-          string: ${{ github.repository }}
+      - name: downcase REPO
+        run: |
+          echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/${{ steps.string.outputs.lowercase }}:latest
+          tags: ghcr.io/${REPO}:latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
