--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/${REPO}:latest
+          tags: ghcr.io/${{ REPO }}:latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
