--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,13 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: downcase REPO
-        run: |
-          echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: ghcr.io/${{ REPO }}:latest
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+      - name: echo downcase repo
+        run: echo "${GITHUB_REPOSITORY,,}"
+      #- name: Build and push
+      #  id: docker_build
+      #  uses: docker/build-push-action@v2
+      #  with:
+      #    push: true
+      #    tags: ghcr.io/${REPO}:latest
+      #- name: Image digest
+      #  run: echo ${{ steps.docker_build.outputs.digest }}
