--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,11 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: echo downcase repo
         run: echo "${GITHUB_REPOSITORY,,}"
-      #- name: Build and push
-      #  id: docker_build
-      #  uses: docker/build-push-action@v2
-      #  with:
-      #    push: true
-      #    tags: ghcr.io/${REPO}:latest
-      #- name: Image digest
-      #  run: echo ${{ steps.docker_build.outputs.digest }}
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ghcr.io/"${GITHUB_REPOSITORY,,}":latest
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
