--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/"${GITHUB_REPOSITORY,,}":latest
+          tags: ghcr.io/$(echo "${GITHUB_REPOSITORY,,}"):latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
