--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: echo downcase repo
-        run: echo "${GITHUB_REPOSITORY,,}"
+        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/$(echo ${GITHUB_REPOSITORY,,}):latest
+          tags: ghcr.io/${REPO}:latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
