Add github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,13 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: downcase repo
         id: repo_lowercase
-        run: echo "${GITHUB_REPOSITORY,,}"
+        run: |
+          echo echo "::set-output name=repo::${GITHUB_REPOSITORY,,}"
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/${{ steps.repo_lowercase.outputs }}:latest
+          tags: ghcr.io/${{ steps.repo_lowercase.outputs.repo }}:latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
