--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,10 @@ jobs:
     name: ""
     runs-on: ubuntu-latest
     steps:
-      #- name: Set up QEMU
-      #  uses: docker/setup-qemu-action@v2
-      #- name: Set up Docker Buildx
-      #  uses: docker/setup-buildx-action@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
